# aim2go

./: Cargo.toml  README.md  overlay.rs
src/: app.rs  cli.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  overlay.rs  thread.rs  ui.rs
src/modules/: autoclicker.rs  mod.rs
test/: config.yaml
