[package]
name = "aim2go"
version = "0.1.0"
authors = ["rottedfm <rottedfm@proton.me>"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
futures = "0.3.31"
indicatif = "0.17.9"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser"] }
xcap = "0.2.2"
